...
      // Switch to the previous verse (if exists).
      controllerButtons.add(IconButton(
        onPressed: _verse == 0 ? null : () => switchVerse(false),
        icon: const Icon(Icons.arrow_circle_left_outlined),
        tooltip: 'Előző vers',
        disabledColor: ThemeData.dark().highlightColor,
        key: const Key('_MySongPageState.IconButton.prevVerse'),
      ));
    }
    // Switch to the previous song's first verse (if exists).
    controllerButtons.add(TextIconButton(
      text: _song == 0
          ? null
...
                scrollController.jumpTo(0);
              });
            },
      iconData: Icons.arrow_upward,
      tooltip: 'Előző ének',
      disabledColor: ThemeData.dark().highlightColor,
      key: const Key('_MySongPageState.IconButton.prevSong'),
      alignment: Alignment.topRight,
      context: context,
    ));
    if (widget.settingsProvider.scoreDisplay != ScoreDisplay.all) {
      // Change font size.
      controllerButtons.add(IconButton(
...
                scrollController.jumpTo(0);
              });
            },
      iconData: Icons.arrow_downward,
      tooltip: 'Következő ének',
      disabledColor: ThemeData.dark().highlightColor,
      key: const Key('_MySongPageState.IconButton.nextSong'),
      alignment: Alignment.bottomRight,
      context: context,
    ));
    if (widget.settingsProvider.scoreDisplay == ScoreDisplay.all) {
      // Switch to the next verse (if exists).
      controllerButtons.add(IconButton(
...
                widget.songBooks[widget.book.name][songKey]['texts'].length - 1)
            ? null
            : () => switchVerse(true),
        icon: const Icon(Icons.arrow_circle_right_outlined),
        tooltip: 'Következő vers',
        disabledColor: ThemeData.dark().highlightColor,
        key: const Key('_MySongPageState.IconButton.nextVerse'),
      ));
    }

    return Scaffold(
      // @see https://api.flutter.dev/flutter/widgets/NestedScrollView-class.html
      body: OrientationBuilder(
...
                ],
              ),
            ),
          );
        },
      ),
      key: const Key('_MySongPageState'),
    );
  }
}

class TextIconButton extends StatelessWidget {
  final void Function()? onTap;
...
